# web-hw-07

./: alembic.ini  connect_db.py  main.py  managers.py  model.py  my_select.py  pyproject.toml  requirements.txt  seed.py
alembic/: env.py
alembic/versions/: fd3d86b2cf58_init.py
